eth-nodes/clc-checkpoint-sync-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: checkpoint-sync-server
  namespace: eth-nodes
  labels:
    app.kubernetes.io/name: checkpoint-sync-server
spec:
  terminationGracePeriodSeconds: 3
  volumes:
    - name: local-testnet-bootstrap
      persistentVolumeClaim:
        claimName: local-testnet-bootstrap-pvc
    - name: server-config
      configMap:
        name: server-config
  containers:
  - name: checkpoint-sync-server
    image: python:3.9-slim
    command: ["/bin/sh", "/config/entrypoint.sh"]
    volumeMounts:
    - name: local-testnet-bootstrap
      mountPath: /local-testnet-bootstrap
    - name: server-config
      mountPath: /config
    ports:
    - containerPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: checkpoint-sync-server
  namespace: eth-nodes
  labels:
    app.kubernetes.io/name: checkpoint-sync-server
spec:
  selector:
    app.kubernetes.io/name: checkpoint-sync-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
